Lagt till strings som används för knappar i layout för main och second activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Shared Preferences</string>
-
-
-    <string name="save">save</string>
+    <string name="Open">Open</string>
+    <string name="Save">Save</string>
 </resources>
